--- a/index.css
+++ b/index.css
@@ -1,26 +1,55 @@
 * {
     margin: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 main {
     background-image: url(./images/leder.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     display: block;
-    width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 h1 {
-    text-align-last: center;
+    font-size: 50px;
+    color: red;
     padding-top: 40vh;
     padding-bottom: 40px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 500px;
+    margin-left: 200px;
 }
 .buttons {
     display: grid;
     grid-template-columns: 1fr 1fr;
     width: 350px;
     margin: auto;
+    margin-left: 200px;
 }
 button {
+    border: none;
+    background-color: green;
     width: 150px;
     height: 70px;
     font-size: 25px;
+}
+.header {
+    background-color: rgba(0, 255, 0, 0.2);
+    position: fixed;
+    width: 100%;
+}
+nav {
+    display: grid;
+    gap: 10px;
+    grid-auto-flow: column;
+    justify-content: end;
+    margin: 0 20px;
+}
+nav a {
+    color: black;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 10px;
+}
+#logo {
+    width: 100px;
 }
