--- a/index.css
+++ b/index.css
@@ -9,9 +9,6 @@ main {
     background-size: cover;
     display: block;
     height: 100vh;
-    filter: blur(4px);
-    transition: 1s;
-    filter: blur(0px);
 }
 h1 {
     font-size: 50px;
@@ -30,6 +27,7 @@ h1 {
 }
 button {
     border: none;
+    color: rgb(20, 20, 20);
     background-color: green;
     width: 150px;
     height: 70px;
@@ -44,6 +42,7 @@ button {
     display: flex;
     background-color: rgba(100, 255, 100, 0.2);
     position: fixed;
+    top: 0;
     width: 100%;
     justify-content: space-between;
 }
