Endret struktur, gjort ferdig nettsted

--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@ h1 {
     color: red;
     margin-bottom: 40px;
     padding: 5px;
-    width: 500px;
+    width: 60%;
     margin-right: 0;
     background-color: rgba(255, 255, 255, 0.4);
 }
