--- a/css/info.css
+++ b/css/info.css
@@ -34,7 +34,7 @@ main {
 }
 h1 {
     margin-bottom: 10px;
-    margin-left: 200px;
+    margin-left: 20vw;
     color: rgb(70, 70, 70);
     font-size: 45px;
 }
